--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -1,4 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
 <h2>Index Template</h2>
+<div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle" id="dropdownMenuButton1" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+    BootStrap Dropdown
+  </button>
+  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+    <li><a class="dropdown-item" href="#">Item 1</a></li>
+    <li><a class="dropdown-item" href="#">Item 2</a></li>
+    <li><a class="dropdown-item" href="#">Item 3</a></li>
+  </ul>
+</div>
 {% endblock %}
