--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -1,14 +1,16 @@
 {% extends "base.html" %}
 {% block content %}
-<h2>Index Template</h2>
-<div class="dropdown">
-  <button class="btn btn-secondary dropdown-toggle" id="dropdownMenuButton1" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-    BootStrap Dropdown
-  </button>
-  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-    <li><a class="dropdown-item" href="#">Item 1</a></li>
-    <li><a class="dropdown-item" href="#">Item 2</a></li>
-    <li><a class="dropdown-item" href="#">Item 3</a></li>
-  </ul>
-</div>
+<ul class="pagination">
+    <li class="page-item disabled">
+        <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
+    </li>
+    <li class="page-item"><a class="page-link" href="#">1</a></li>
+    <li class="page-item active" aria-current="page">
+        <a class="page-link" href="#">2</a>
+    </li>
+    <li class="page-item"><a class="page-link" href="#">3</a></li>
+    <li class="page-item">
+        <a class="page-link" href="#">Next</a>
+    </li>
+</ul>
 {% endblock %}
