--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -1,16 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
-<ul class="pagination">
-    <li class="page-item disabled">
-        <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
-    </li>
-    <li class="page-item"><a class="page-link" href="#">1</a></li>
-    <li class="page-item active" aria-current="page">
-        <a class="page-link" href="#">2</a>
-    </li>
-    <li class="page-item"><a class="page-link" href="#">3</a></li>
-    <li class="page-item">
-        <a class="page-link" href="#">Next</a>
-    </li>
-</ul>
+<div class="row">
+    <div class="col-xs-12 col-sm-10 col-md-6 bg-primary">Column 1</div>
+    <div class="col-xs-12 col-sm-2 col-md-2 bg-danger">Column 2</div>
+    <div class="col bg-success">Column 3</div>
+</div>
 {% endblock %}
