--- a/templates/blog/post-detail.html
+++ b/templates/blog/post-detail.html
@@ -1,14 +1,15 @@
 {% extends "base.html" %}
+{% load blog_extras %}
 {% block content %}
 <h2>{{ post.title }}</h2>
-<div class="row">
-    <div class="col">
+{% row %}
+    {% col %}
         {% include "blog/post-byline.html" %}
-    </div>
-</div>
-<div class="row">
-    <div class="col">
+    {% endcol %}
+{% endrow %}
+{% row %}
+    {% col %}
         {{ post.content|safe }}
-    </div>
-</div>
+    {% endcol %}
+{% endrow %}
 {% endblock %}
