--- a/templates/blog/post-detail.html
+++ b/templates/blog/post-detail.html
@@ -12,4 +12,9 @@
         {{ post.content|safe }}
     {% endcol %}
 {% endrow %}
+{% row %}
+    {% col %}
+        {% recent_posts post %}
+    {% endcol %}
+{% endrow %}
 {% endblock %}
